fix image stretching

--- a/src/app/survey/flash-card/flash-card.component.scss
+++ b/src/app/survey/flash-card/flash-card.component.scss
@@ -16,6 +16,7 @@
 .img {
   img {
     max-height: 50vh;
+    object-fit: cover;
   }
 }
 
